src/CSS/main.css
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
:root {
  --white: #fbfbfb;
  --card-background: #000000d0;
  --search-background: #7c7c7c2b; }

*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box; }

/* Typography */
.city {
  font-size: 2rem;
  font-weight: 700; }

.temperature {
  font-size: 2.7rem;
  font-weight: 400; }

.card-weather p {
  font-size: 1rem; }

.search {
  font-size: 1rem; }

/* General styling */
/* Card styling */
body {
  display: flex;
  align-items: center;
  flex-direction: column;
  font-family: "Open Sans";
  background: #222;
  background-image: url("https://source.unsplash.com/1600x900/?Landscape");
  background-attachment: fixed;
  background-position: center;
  overflow: auto;
  overflow-x: hidden;
  position: relative; }

.card {
  margin-top: 3rem;
  padding: 2em;
  border-radius: 1em;
  width: 90%;
  max-width: 30rem;
  background-color: var(--card-background);
  color: var(--white); }
  @media (max-width: 735px) {
    .card {
      position: relative; } }

.form {
  display: flex;
  justify-content: space-between;
  align-items: center; }

.search {
  padding: 1em;
  outline: none;
  border: none;
  border-radius: 1.4em;
  width: 85%;
  margin-right: 1rem;
  color: var(--white);
  background-color: var(--search-background); }
  @media (max-width: 735px) {
    .search {
      margin: 0.5em 0; } }

.form button,
.wind button {
  padding: 0.7em;
  border-radius: 50%;
  width: 2.5rem;
  outline: none;
  border: none;
  cursor: pointer;
  color: var(--white);
  background-color: var(--search-background); }

.form button:hover,
.wind button:hover {
  color: rgba(233, 233, 233, 0.9); }

.fa-search,
.fa-ellipsis-h,
.fa-save,
.fa-star {
  font-size: 1.2rem;
  color: inherit;
  pointer-events: none; }

.save-location,
.show-favourite {
  padding: 0.7em;
  border-radius: 0.7em;
  width: 2.5rem;
  outline: none;
  border: none;
  cursor: pointer;
  color: var(--white);
  background-color: var(--card-background); }
  @media (max-width: 735px) {
    .save-location,
    .show-favourite {
      background-color: var(--search-background);
      border-radius: 50%; } }

.save-location:active,
.show-favourite:active {
  transform: scale(0.95); }

.save-show-icons {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 7.15rem;
  position: absolute;
  right: 3rem;
  top: 3rem; }
  @media (max-width: 735px) {
    .save-show-icons {
      top: 0.5rem;
      right: 0.5rem; } }

.tooltip {
  position: relative;
  display: inline-block; }
  .tooltip .save-tooltip,
  .tooltip .favourite-tooltip {
    visibility: hidden;
    width: 120px;
    background-color: #121212;
    color: #fff;
    text-align: center;
    border-radius: 6px;
    padding: 5px 0; }
  .tooltip .save-tooltip {
    position: absolute;
    z-index: 1;
    width: 120px;
    bottom: 105%;
    left: 50%;
    margin-left: -60px; }
  .tooltip .favourite-tooltip {
    position: absolute;
    z-index: 1;
    width: 120px;
    top: 105%;
    left: 50%;
    margin-left: -60px; }

.tooltip:hover .save-tooltip,
.tooltip:hover .favourite-tooltip {
  visibility: visible; }

.card .city {
  margin-top: 2.5rem; }

.temperature-and-icon {
  display: flex;
  align-items: center;
  margin: 0.5rem 0; }

.error-location {
  text-align: center;
  margin-top: 1rem; }

/* Next days styling */
.nextdays-weather {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
  grid-gap: 20px;
  width: 100%;
  max-width: 100rem;
  justify-items: center;
  margin: 2rem 0; }

.day {
  position: relative;
  padding: 2em;
  border-radius: 1em;
  width: 90%;
  max-width: 30rem;
  background-color: var(--card-background);
  color: var(--white); }

.lds-dual-ring {
  display: inline-block;
  width: 80px;
  height: 80px; }

.lds-dual-ring:after {
  content: " ";
  display: block;
  width: 64px;
  height: 64px;
  margin: 8px;
  border-radius: 50%;
  border: 6px solid #fcf;
  border-color: #fcf transparent #fcf transparent;
  animation: lds-dual-ring 1.2s linear infinite; }

@keyframes lds-dual-ring {
  0% {
    transform: rotate(0deg); }
  100% {
    transform: rotate(360deg); } }
.loader {
  position: fixed;
  z-index: 99;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center; }

.loader.hidden {
  animation: fadeOut 1s;
  animation-fill-mode: forwards; }

@keyframes fadeOut {
  100% {
    opacity: 0;
    visibility: hidden;
    z-index: -1; } }
.wind {
  display: flex;
  align-items: center;
  justify-content: space-between; }

.next-days-button {
  position: absolute;
  right: 2rem;
  bottom: 1.6rem;
  padding: 0.45em;
  border-radius: 50%;
  width: 2rem;
  outline: none;
  border: none;
  cursor: pointer;
  color: var(--white);
  background-color: var(--search-background); }
  .next-days-button:hover {
    color: rgba(233, 233, 233, 0.9); }

.modal-container {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.3);
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  opacity: 0;
  pointer-events: none;
  transition: opacity 300ms ease;
  overflow: auto; }

.modal-container.show {
  opacity: 1;
  pointer-events: auto; }

.modal {
  background-color: #292827;
  color: var(--white);
  width: 95%;
  max-width: 50rem;
  padding: 2rem 3rem;
  border-radius: 0.5em; }
  @media (max-width: 500px) {
    .modal h1 {
      font-size: 1.4rem; } }
  @media (max-width: 500px) {
    .modal {
      padding: 1rem 2rem; } }
  .modal p {
    margin: 1em 0;
    opacity: 0.8; }
    @media (max-width: 500px) {
      .modal p {
        font-size: 0.9rem; } }
  .modal button {
    display: block;
    cursor: pointer;
    border: none;
    border-left: 1px solid;
    border-right: 1px solid;
    align-self: flex-start;
    padding: 0.2em 0.7em;
    margin-top: 1em;
    font-family: inherit;
    background-color: transparent;
    color: #fbfbfb;
    font-size: 1rem; }
    @media (max-width: 500px) {
      .modal button {
        font-size: 0.9rem; } }
  @media (max-width: 500px) {
    .modal .column {
      text-align: center; } }

.hours {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(5rem, 1fr));
  justify-items: center; }

.details {
  display: flex;
  justify-content: space-around;
  margin: 1em 0; }
  .details div {
    display: flex;
    flex-direction: column; }
    .details div p {
      text-transform: uppercase;
      margin: 0;
      line-height: 2;
      font-size: 0.9rem; }
    .details div span {
      margin-bottom: 0.7em; }

/*# sourceMappingURL=main.css.map */

